Add Java 21/25 build targets and multi-jar API
Introduce configurable Java target (minepayJavaVersion) with default 25 and propagate targetJavaVersion/paperApiVersion across subprojects. Update toolchains and options.release to honor the target (21 or 25) and choose matching Paper API coordinates. Add additional API build tasks and classifiers (jvm8, jvm11, jvm17, jvm25) and attach them to Maven publications so the API is published for multiple Java versions. Update README with build instructions and artifact locations, and add minepayJavaVersion=25 to gradle.properties. Also include small code cleanups: safer string-id check, explicit generic for HashMap, rename discarded exception/lambda params to ignored, and switch Maven Central URL used by the Paper loader to the Google mirror.